04-prometheus-adapter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-adapter
  template:
    metadata:
      labels:
        app: prometheus-adapter
    spec:
      serviceAccountName: prometheus-adapter
      containers:
      - name: prometheus-adapter
        image: k8s.gcr.io/prometheus-adapter/prometheus-adapter:v0.11.2
        args:
        - "--prometheus-url=http://prometheus.monitoring.svc:9090/"
        - "--config=/etc/adapter/config.yaml"
        - "--metrics-relist-interval=30s"
        - "--v=4"
        - "--secure-port=6443"
        securityContext:
          runAsUser: 0
          runAsNonRoot: false
        ports:
        - containerPort: 6443
          name: https
        volumeMounts:
        - name: config-volume
          mountPath: /etc/adapter
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-adapter-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-adapter
  namespace: monitoring
spec:
  selector:
    app: prometheus-adapter
  ports:
  - port: 443
    targetPort: 6443
